--- a/contact.html
+++ b/contact.html
@@ -137,13 +137,11 @@
                                 </li>
                             </ul>
                             <hr>
-                            <p class="text-muted mb-3" style="color:#ff6600;"><i class="fas fa-clock me-2"
-                                    style="color:#ff6600;"></i>Ouvert du
+                            <p class="text-muted mb-3"><i class="fas fa-clock me-2"></i>Ouvert du
                                 lundi au vendredi, de
                                 9h à 17h
                             </p>
-                            <h3 class="h5 mt-4 mb-3 text-primary" style="color:#ff6600;"><i
-                                    class="fas fa-share-alt me-2" style="color:#ff6600;"></i>Réseaux sociaux
+                            <h3 class="h5 mt-4 mb-3 text-primary"><i class="fas fa-share-alt me-2"></i>Réseaux sociaux
                             </h3>
                             <div class="d-flex gap-3">
                                 <a href="https://facebook.com/LtdHealthClub10" class="btn btn-outline-primary btn-sm"
