--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,32 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .text-orange,
+        .text-orange * {
+            color: #ff6600 !important;
+        }
+
+        .footer,
+        .footer a,
+        .footer p,
+        .footer small {
+            color: #ff6600 !important;
+        }
+
+        .hero-section h1,
+        .hero-section h2 {
+            color: #ff6600 !important;
+        }
+
+        .navbar,
+        .navbar a,
+        .navbar-brand span,
+        .nav-link,
+        .dropdown-item {
+            color: #ff6600 !important;
+        }
+    </style>
 </head>
 
 <body class="d-flex flex-column min-vh-100">
@@ -79,7 +105,7 @@
             <div class="row g-4">
                 <!-- Formulaire de contact -->
                 <div class="col-lg-6">
-                    <div class="card shadow-sm border-0 h-100" style="color:#ff6600;">
+                    <div class="card shadow-sm border-0 h-100 text-orange">
                         <div class="card-body p-4">
                             <h2 class="h3 mb-4 text-orange"><i class="fas fa-envelope me-2"></i>Formulaire rapide</h2>
                             <form action="https://formspree.io/f/meozqgpl" method="POST" class="needs-validation"
@@ -100,6 +126,7 @@
                                         required></textarea>
                                     <div class="invalid-feedback">Veuillez saisir votre message</div>
                                 </div>
+                                <div class="loader" id="formLoader"></div>
                                 <button type="submit" class="btn btn-primary w-100 py-2">
                                     <i class="fas fa-paper-plane me-2"></i>Envoyer
                                 </button>
@@ -173,13 +200,18 @@
                                 class="text-white-50 text-decoration-none">ksksamuelkis@gmail.com</a>
                         </small></p>
                 </div>
-                <div class="col-md-4 text-md-end mt-3 mt-md-0">
-                    <a href="https://facebook.com/LtdHealthClub10" class="me-3" target="_blank" rel="noopener"><i
-                            class="fab fa-facebook-f"></i></a>
-                    <a href="https://twitter.com/LtdHealthClub10" class="me-3" target="_blank" rel="noopener"><i
-                            class="fab fa-twitter"></i></a>
-                    <a href="https://linkedin.com/" target="_blank" rel="noopener"><i
-                            class="fab fa-linkedin-in"></i></a>
+                <div class="col-md-4 text-md-end mt-3 mt-md-0" style="color:#ff6600;">
+                    <a href="https://facebook.com/LtdHealthClub10" class="me-3" target="_blank" rel="noopener"
+                        style="color:#ff6600;">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="https://twitter.com/LtdHealthClub10" class="me-3" target="_blank" rel="noopener"
+                        style="color:#ff6600;">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="https://linkedin.com/" target="_blank" rel="noopener" style="color:#ff6600;">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
                 </div>
             </div>
         </div>
@@ -190,11 +222,17 @@
         document.getElementById("contactForm").addEventListener("submit", function (event) {
             event.preventDefault(); // éviter soumission immédiate
             const success = document.getElementById("formSuccess");
-            success.style.display = "block";
+            const loader = document.getElementById("formLoader");
+            loader.style.display = "block";
+            success.style.display = "none";
             setTimeout(() => {
-                success.style.display = "none";
-                event.target.submit(); // maintenant on envoie le formulaire
-            }, 3000);
+                loader.style.display = "none";
+                success.style.display = "block";
+                setTimeout(() => {
+                    success.style.display = "none";
+                    event.target.submit(); // maintenant on envoie le formulaire
+                }, 2000);
+            }, 1200);
         });
 
         // Animation fade-in sur les sections
