--- a/contact.html
+++ b/contact.html
@@ -8,32 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <style>
-        .text-orange,
-        .text-orange * {
-            color: #ff6600 !important;
-        }
 
-        .footer,
-        .footer a,
-        .footer p,
-        .footer small {
-            color: #ff6600 !important;
-        }
-
-        .hero-section h1,
-        .hero-section h2 {
-            color: #ff6600 !important;
-        }
-
-        .navbar,
-        .navbar a,
-        .navbar-brand span,
-        .nav-link,
-        .dropdown-item {
-            color: #ff6600 !important;
-        }
-    </style>
 </head>
 
 <body class="d-flex flex-column min-vh-100">
@@ -107,7 +82,8 @@
                 <div class="col-lg-6">
                     <div class="card shadow-sm border-0 h-100 text-orange">
                         <div class="card-body p-4">
-                            <h2 class="h3 mb-4 text-orange"><i class="fas fa-envelope me-2"></i>Formulaire rapide</h2>
+                            <h2 class="h3 mb-4 text-orange" style="color:#ff6600;"><i class="fas fa-envelope me-2"
+                                    style="color:#ff6600;"></i>Formulaire rapide</h2>
                             <form action="https://formspree.io/f/meozqgpl" method="POST" class="needs-validation"
                                 novalidate id="contactForm">
                                 <div class="mb-3">
@@ -127,11 +103,11 @@
                                     <div class="invalid-feedback">Veuillez saisir votre message</div>
                                 </div>
                                 <div class="loader" id="formLoader"></div>
-                                <button type="submit" class="btn btn-primary w-100 py-2">
+                                <button type="submit" class="btn btn-orange w-100 py-2">
                                     <i class="fas fa-paper-plane me-2"></i>Envoyer
                                 </button>
                                 <div class="alert alert-success mt-3 form-success" id="formSuccess"
-                                    style="display:none;">
+                                    style="display:none;">s
                                     <i class="fas fa-check-circle me-2"></i>Votre message a bien été envoyé. Merci !
                                 </div>
                             </form>
@@ -140,25 +116,25 @@
                 </div>
                 <!-- Informations de contact -->
                 <div class="col-lg-6">
-                    <div class="card shadow-sm border-0 h-100" style="color:#ff6600;">
+                    <div class="card shadow-sm border-0 h-100" stylc>
                         <div class="card-body" style="color:#ff6600;">
                             <h2 class="h3 mb-4 text-orange"><i class="fas fa-address-book me-2"
                                     style="color:#ff6600;"></i>Coordonnées</h2>
                             <ul class="list-unstyled vstack gap-3 mb-4" style="color:#ff6600;">
                                 <li>
-                                    <i class="fas fa-phone me-2 text-primary" style="color:#ff6600;"></i>
+                                    <i class="fas fa-phone me-2 text-orange" style="color:#ff6600;"></i>
                                     <strong>Téléphone :</strong><br>
                                     <a href="tel:+243988212191" class="text-decoration-none" style="color:#ff6600;">+243
                                         988 212 191</a>
                                 </li>
                                 <li>
-                                    <i class="fas fa-envelope me-2 text-primary" style="color:#ff6600;"></i>
+                                    <i class="fas fa-envelope me-2 text-orange" style="color:#ff6600;"></i>
                                     <strong>Email :</strong><br>
                                     <a href="mailto:LtdHealthClub10@gmail.com" class="text-decoration-none"
                                         style="color:#ff6600;">LtdHealthClub10@gmail.com</a>
                                 </li>
                                 <li>
-                                    <i class="fas fa-map-marker-alt me-2 text-primary" style="color:#ff6600;"></i>
+                                    <i class="fas fa-map-marker-alt me-2 text-orange" style="color:#ff6600;"></i>
                                     <strong>Adresse :</strong><br>
                                     Avenue Kintambo n°15/Binza Delvaux, Kinshasa
                                 </li>
@@ -168,17 +144,18 @@
                                 lundi au vendredi, de
                                 9h à 17h
                             </p>
-                            <h3 class="h5 mt-4 mb-3 text-primary"><i class="fas fa-share-alt me-2"></i>Réseaux sociaux
+                            <h3 class="h5 mt-4 mb-3 text-orange" style="color:#ff6600;">
+                                <i class="fas fa-share-alt me-2 text-orange" style="color:#ff6600;"></i>Réseaux sociaux
                             </h3>
                             <div class="d-flex gap-3">
-                                <a href="https://facebook.com/LtdHealthClub10" class="btn btn-outline-primary btn-sm"
+                                <a href="https://facebook.com/LtdHealthClub10" class="btn btn-orange btn-sm"
                                     target="_blank"><i class="fab fa-facebook-f"></i></a>
-                                <a href="https://twitter.com/LtdHealthClub10" class="btn btn-outline-primary btn-sm"
+                                <a href="https://twitter.com/LtdHealthClub10" class="btn btn-orange btn-sm"
                                     target="_blank"><i class="fab fa-twitter"></i></a>
-                                <a href="https://www.instagram.com/" class="btn btn-outline-primary btn-sm"
-                                    target="_blank"><i class="fab fa-instagram"></i></a>
-                                <a href="https://linkedin.com/" class="btn btn-outline-primary btn-sm"
-                                    target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                                <a href="https://www.instagram.com/" class="btn btn-orange btn-sm" target="_blank"><i
+                                        class="fab fa-instagram"></i></a>
+                                <a href="https://linkedin.com/" class="btn btn-orange btn-sm" target="_blank"><i
+                                        class="fab fa-linkedin-in"></i></a>
                             </div>
                         </div>
                     </div>
