grande_modifications_formulaires_index

--- a/index.html
+++ b/index.html
@@ -237,21 +237,30 @@
                                         17h</small></p>
                             </div>
                             <div class="col-md-6 p-4">
-                                <form>
+                                <form action="https://formspree.io/f/meozqgpl" method="POST" class="needs-validation"
+                                    novalidate id="quickContactForm">
                                     <div class="mb-3">
                                         <input type="text" class="form-control rounded-3" placeholder="Votre nom"
-                                            required>
+                                            name="name" required>
+                                        <div class="invalid-feedback">Veuillez saisir votre nom</div>
                                     </div>
                                     <div class="mb-3">
                                         <input type="email" class="form-control rounded-3" placeholder="Votre email"
-                                            required>
+                                            name="email" required>
+                                        <div class="invalid-feedback">Veuillez saisir un email valide</div>
                                     </div>
                                     <div class="mb-3">
                                         <textarea class="form-control rounded-3" rows="3" placeholder="Votre message"
-                                            required></textarea>
+                                            name="message" required></textarea>
+                                        <div class="invalid-feedback">Veuillez saisir votre message</div>
                                     </div>
+                                    <div class="loader" id="quickFormLoader" style="display:none;"></div>
                                     <button type="submit" class="btn btn-orange w-100 rounded-3">Envoyer <i
                                             class="fas fa-paper-plane ms-2"></i></button>
+                                    <div class="alert alert-success mt-3 form-success" id="quickFormSuccess"
+                                        style="display:none;">
+                                        <i class="fas fa-check-circle me-2"></i>Votre message a bien été envoyé. Merci !
+                                    </div>
                                 </form>
                             </div>
                         </div>
@@ -287,6 +296,23 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
+    <script>
+        document.getElementById("quickContactForm").addEventListener("submit", function (event) {
+            event.preventDefault();
+            const success = document.getElementById("quickFormSuccess");
+            const loader = document.getElementById("quickFormLoader");
+            loader.style.display = "block";
+            success.style.display = "none";
+            setTimeout(() => {
+                loader.style.display = "none";
+                success.style.display = "block";
+                setTimeout(() => {
+                    success.style.display = "none";
+                    event.target.submit();
+                }, 2000);
+            }, 1200);
+        });
+    </script>
 </body>
 
 </html>
