--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <img src="images/booste.jpg" alt="Pourquoi choisir LTD" class="img-fluid rounded-4 shadow">
                 </div>
                 <div class="col-md-6">
-                    <h2 class="h3 fw-bold mb-3 section-title">Pourquoi choisir LTD HEALTH CLUB ?</h2>
+                    <h2 class="h3 fw-bold mb-3 section-title">Pourquoi nous choisir ?</h2>
                     <ul class="list-unstyled fs-5">
                         <li class="mb-3"><i class="fas fa-check-circle text-orange me-2"></i>Des tarifs accessibles
                             pour tous</li>
