--- a/team.html
+++ b/team.html
@@ -17,6 +17,54 @@
 <body class="d-flex flex-column min-vh-100">
 
     <!-- HEADER -->
+    <header class="shadow-sm">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container">
+                <a class="navbar-brand d-flex align-items-center" href="#">
+                    <img src="images/logo.jpg" alt="Logo" class="logo me-2" style="max-height:40px;">
+                    <span class="fw-bold">LTD HEALTH CLUB</span>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="mainNav">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a href="index.html" class="nav-link"><i
+                                    class="fas fa-home fa-sm me-1"></i><span class="fw-bold">Accueil</span></a></li>
+                        <li class="nav-item dropdown"><a href="services.html" class="nav-link dropdown-toggle"
+                                id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i
+                                    class="fas fa-hands-helping me-1"></i><span class="fw-bold">Nos Services</span></a>
+                            <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
+                                <li><a class="dropdown-item" href="hospitalisation.html">Hospitalisation</a></li>
+                                <li><a class="dropdown-item" href="soinsCourant.html">Soins courants</a></li>
+                                <li><a class="dropdown-item" href="dentaireOptique.html">Dentaire & Optique</a></li>
+                                <li><a class="dropdown-item" href="pediatrie.html">Pédiatrie</a></li>
+                                <li><a class="dropdown-item" href="plansPersonnalise.html">Plans personnalisés</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a href="about.html" class="nav-link dropdown-toggle" id="aboutDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="fas fa-info-circle me-1"></i>
+                                <span class="fw-bold">À propos</span>
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
+                                <li><a class="dropdown-item" href="mission.html">Notre Mission</a></li>
+                                <li><a class="dropdown-item" href="valeurs.html">Nos Valeurs</a></li>
+                                <li><a class="dropdown-item" href="team.html">Notre Équipe</a></li>
+                                <li><a class="dropdown-item" href="engagement.html">Nos engagements</a></li>
+                                <li><a class="dropdown-item" href="partenaire.html">Nos Partenaires</a></li>
+
+                            </ul>
+                        </li>
+                        <li class="nav-item"><a href="contact.html" class="nav-link"><i
+                                    class="fas fa-envelope me-1"></i><span class="fw-bold">Contactez-nous</span></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
 
 
     <!-- HERO SECTION -->
