modifications_du_weekend_soft

--- a/hospitalisation.html
+++ b/hospitalisation.html
@@ -54,7 +54,7 @@
                                 <li><a class="dropdown-item" href="team.html">Notre Équipe</a></li>
                                 <li><a class="dropdown-item" href="engagement.html">Nos engagements</a></li>
                                 <li><a class="dropdown-item" href="partenaire.html">Nos Partenaires</a></li>
-    
+
                             </ul>
                         </li>
                         <li class="nav-item"><a href="contact.html" class="nav-link"><i
@@ -66,6 +66,12 @@
         </nav>
     </header>
 
+    <!-- Phrase défilante pour signaler la conception -->
+    <div style="background:#ff6600; color:#fff; font-weight:bold;">
+        <marquee behavior="scroll" direction="left" scrollamount="6">
+            Cette page est en pleine conception. Merci de votre compréhension !
+        </marquee>
+    </div>
 
     <!-- HERO SECTION -->
 
