modifications_du_weekend_soft_marquee

--- a/dentaireOptique.html
+++ b/dentaireOptique.html
@@ -15,55 +15,67 @@
 </head>
 
 <body class="d-flex flex-column min-vh-100">
-<!-- HEADER -->
-<header class="shadow-sm">
-    <nav class="navbar navbar-expand-lg">
-        <div class="container">
-            <a class="navbar-brand d-flex align-items-center" href="#">
-                <img src="images/logo.jpg" alt="Logo" class="logo me-2" style="max-height:40px;">
-                <span class="fw-bold">LTD HEALTH CLUB</span>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="mainNav">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a href="index.html" class="nav-link"><i
-                                class="fas fa-home fa-sm me-1"></i><span class="fw-bold">Accueil</span></a></li>
-                    <li class="nav-item dropdown"><a href="services.html" class="nav-link dropdown-toggle"
-                            id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i
-                                class="fas fa-hands-helping me-1"></i><span class="fw-bold">Nos Services</span></a>
-                        <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
-                            <li><a class="dropdown-item" href="hospitalisation.html">Hospitalisation</a></li>
-                            <li><a class="dropdown-item" href="soinsCourant.html">Soins courants</a></li>
-                            <li><a class="dropdown-item" href="dentaireOptique.html">Dentaire & Optique</a></li>
-                            <li><a class="dropdown-item" href="pediatrie.html">Pédiatrie</a></li>
-                            <li><a class="dropdown-item" href="plansPersonnalise.html">Plans personnalisés</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a href="about.html" class="nav-link dropdown-toggle" id="aboutDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="fas fa-info-circle me-1"></i>
-                            <span class="fw-bold">À propos</span>
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
-                            <li><a class="dropdown-item" href="mission.html">Notre Mission</a></li>
-                            <li><a class="dropdown-item" href="valeurs.html">Nos Valeurs</a></li>
-                            <li><a class="dropdown-item" href="team.html">Notre Équipe</a></li>
-                            <li><a class="dropdown-item" href="engagement.html">Nos engagements</a></li>
-                            <li><a class="dropdown-item" href="partenaire.html">Nos Partenaires</a></li>
+    <!-- HEADER -->
+    <header class="shadow-sm">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container">
+                <a class="navbar-brand d-flex align-items-center" href="#">
+                    <img src="images/logo.jpg" alt="Logo" class="logo me-2" style="max-height:40px;">
+                    <span class="fw-bold">LTD HEALTH CLUB</span>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="mainNav">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a href="index.html" class="nav-link"><i
+                                    class="fas fa-home fa-sm me-1"></i><span class="fw-bold">Accueil</span></a></li>
+                        <li class="nav-item dropdown"><a href="services.html" class="nav-link dropdown-toggle"
+                                id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i
+                                    class="fas fa-hands-helping me-1"></i><span class="fw-bold">Nos Services</span></a>
+                            <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
+                                <li><a class="dropdown-item" href="hospitalisation.html">Hospitalisation</a></li>
+                                <li><a class="dropdown-item" href="soinsCourant.html">Soins courants</a></li>
+                                <li><a class="dropdown-item" href="dentaireOptique.html">Dentaire & Optique</a></li>
+                                <li><a class="dropdown-item" href="pediatrie.html">Pédiatrie</a></li>
+                                <li><a class="dropdown-item" href="plansPersonnalise.html">Plans personnalisés</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a href="about.html" class="nav-link dropdown-toggle" id="aboutDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="fas fa-info-circle me-1"></i>
+                                <span class="fw-bold">À propos</span>
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
+                                <li><a class="dropdown-item" href="mission.html">Notre Mission</a></li>
+                                <li><a class="dropdown-item" href="valeurs.html">Nos Valeurs</a></li>
+                                <li><a class="dropdown-item" href="team.html">Notre Équipe</a></li>
+                                <li><a class="dropdown-item" href="engagement.html">Nos engagements</a></li>
+                                <li><a class="dropdown-item" href="partenaire.html">Nos Partenaires</a></li>
 
-                        </ul>
-                    </li>
-                    <li class="nav-item"><a href="contact.html" class="nav-link"><i
-                                class="fas fa-envelope me-1"></i><span class="fw-bold">Contactez-nous</span></a>
-                    </li>
-                </ul>
+                            </ul>
+                        </li>
+                        <li class="nav-item"><a href="contact.html" class="nav-link"><i
+                                    class="fas fa-envelope me-1"></i><span class="fw-bold">Contactez-nous</span></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
-</header>
+        </nav>
+    </header>
+    <!-- Ajoute juste après la balise <header> -->
+    <header class="shadow-sm">
+        <!-- ...existing code... -->
+    </header>
+
+    <!-- Phrase défilante pour signaler la conception -->
+    <div style="background:#ff6600; color:#fff; font-weight:bold;">
+        <marquee behavior="scroll" direction="left" scrollamount="6">
+            Cette page est en pleine conception. Merci de votre compréhension !
+        </marquee>
+    </div>
+    <!-- ...existing code... -->
 
     <!-- HERO SECTION -->
 
