--- a/team.html
+++ b/team.html
@@ -65,6 +65,18 @@
             </div>
         </nav>
     </header>
+    <!-- Ajoute juste après la balise <header> -->
+    <header class="shadow-sm">
+        <!-- ...existing code... -->
+    </header>
+
+    <!-- Phrase défilante pour signaler la conception -->
+    <div style="background:#ff6600; color:#fff; font-weight:bold;">
+        <marquee behavior="scroll" direction="left" scrollamount="6">
+            Cette page est en pleine conception. Merci de votre compréhension !
+        </marquee>
+    </div>
+    <!-- ...existing code... -->
 
 
     <!-- HERO SECTION -->
