--- a/team.html
+++ b/team.html
@@ -66,10 +66,6 @@
         </nav>
     </header>
     <!-- Ajoute juste après la balise <header> -->
-    <header class="shadow-sm">
-        <!-- ...existing code... -->
-    </header>
-
     <!-- Phrase défilante pour signaler la conception -->
     <div style="background:#ff6600; color:#fff; font-weight:bold;">
         <marquee behavior="scroll" direction="left" scrollamount="6">
@@ -77,6 +73,30 @@
         </marquee>
     </div>
     <!-- ...existing code... -->
+    <!-- Section Équipe -->
+    <main class="flex-grow-1 py-5">
+        <section class="container">
+            <div class="row justify-content-center">
+                <article class="card mb-5 border-0 shadow-sm">
+                    <div class="card-body p-4">
+                        <h2 class="h3 mb-4 text-primary"><i class="fas fa-users me-2"></i>Notre équipe</h2>
+                        <div class="row align-items-center">
+                            <div class="col-md-8">
+                                <p>Notre équipe est composée de professionnels de la santé et de la protection
+                                    sociale, passionnés par leur métier et engagés à vos côtés.</p>
+                                <p>Nous mettons à votre disposition notre expertise pour vous accompagner dans vos
+                                    choix de santé et vous aider à mieux comprendre vos droits et vos garanties.</p>
+                            </div>
+                            <div class="col-md-6 mb-4 mb-md-0 text-center">
+                                <img src="images/assistance.jpg" alt="Travail d'équipe"
+                                    class="img-fluid rounded-4 shadow">
+                            </div>
+                        </div>
+                    </div>
+                </article>
+            </div>
+        </section>
+    </main>
 
 
     <!-- HERO SECTION -->
