team_pages_orange

--- a/team.html
+++ b/team.html
@@ -79,7 +79,9 @@
             <div class="row justify-content-center">
                 <article class="card mb-5 border-0 shadow-sm">
                     <div class="card-body p-4">
-                        <h2 class="h3 mb-4 text-primary"><i class="fas fa-users me-2"></i>Notre équipe</h2>
+                        <h2 class="h3 fw-bold mb-3 section-title"><i class="fas fa-users me-2"
+                                style="color:#ff6600;"></i>Notre
+                            équipe</h2>
                         <div class="row align-items-center">
                             <div class="col-md-8">
                                 <p>Notre équipe est composée de professionnels de la santé et de la protection
