team_pages_orange_photos

--- a/team.html
+++ b/team.html
@@ -72,8 +72,7 @@
             Cette page est en pleine conception. Merci de votre compréhension !
         </marquee>
     </div>
-    <!-- ...existing code... -->
-    <!-- Section Équipe -->
+    <!-- SECTION ÉQUIPE -->
     <main class="flex-grow-1 py-5">
         <section class="container">
             <div class="row justify-content-center">
@@ -97,13 +96,45 @@
                     </div>
                 </article>
             </div>
+            <!-- Ajout de la touche personnelle : cartes membres de l'équipe -->
+            <div class="row g-4 justify-content-center">
+                <div class="col-md-4">
+                    <div class="card h-100 shadow-sm border-0 text-center animate__animated animate__fadeInUp">
+                        <img src="images/membre1.jpg" class="card-img-top rounded-circle mx-auto mt-3"
+                            style="width:120px;height:120px;object-fit:cover;" alt="Nom Prénom">
+                        <div class="card-body">
+                            <h5 class="card-title mb-1">Dr LOTIS Djopi</h5>
+                            <p class="text-muted mb-2">Fondateur & Directeur</p>
+                            <p class="card-text small">"Mettre l’humain au cœur de la santé, c’est notre mission."</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card h-100 shadow-sm border-0 text-center animate__animated animate__fadeInUp">
+                        <img src="images/membre2.jpg" class="card-img-top rounded-circle mx-auto mt-3"
+                            style="width:120px;height:120px;object-fit:cover;" alt="Nom Prénom">
+                        <div class="card-body">
+                            <h5 class="card-title mb-1">Marie Mbala</h5>
+                            <p class="text-muted mb-2">Responsable Relations Adhérents</p>
+                            <p class="card-text small">"Toujours à l’écoute pour mieux vous accompagner."</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card h-100 shadow-sm border-0 text-center animate__animated animate__fadeInUp">
+                        <img src="images/membre3.jpg" class="card-img-top rounded-circle mx-auto mt-3"
+                            style="width:120px;height:120px;object-fit:cover;" alt="Nom Prénom">
+                        <div class="card-body">
+                            <h5 class="card-title mb-1">Jean Kabasele</h5>
+                            <p class="text-muted mb-2">Conseiller Santé</p>
+                            <p class="card-text small">"Votre bien-être, notre priorité chaque jour."</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Fin ajout cartes membres -->
         </section>
     </main>
-
-
-    <!-- HERO SECTION -->
-
-
     <!-- FOOTER -->
     <footer class="footer mt-auto py-4">
         <div class="container">
