--- a/team.html
+++ b/team.html
@@ -100,7 +100,7 @@
             <div class="row g-4 justify-content-center">
                 <div class="col-md-4">
                     <div class="card h-100 shadow-sm border-0 text-center animate__animated animate__fadeInUp">
-                        <img src="images/membre1.jpg" class="card-img-top rounded-circle mx-auto mt-3"
+                        <img src="images/lotis.jpg" class="card-img-top rounded-circle mx-auto mt-3"
                             style="width:120px;height:120px;object-fit:cover;" alt="Nom Prénom">
                         <div class="card-body">
                             <h5 class="card-title mb-1">Dr LOTIS Djopi</h5>
