team_pages_orange_photos_lotis

--- a/team.html
+++ b/team.html
@@ -100,8 +100,8 @@
             <div class="row g-4 justify-content-center">
                 <div class="col-md-4">
                     <div class="card h-100 shadow-sm border-0 text-center animate__animated animate__fadeInUp">
-                        <img src="images/lotis.jpg" class="card-img-top rounded-circle mx-auto mt-3"
-                            style="width:120px;height:120px;object-fit:cover;" alt="Nom Prénom">
+                        <img src="images/lotis.jpg" class="card-img-top rounded-circle mx-auto mt-6"
+                            style="width:200px;height:200px;object-fit:cover;" alt="Nom Prénom">
                         <div class="card-body">
                             <h5 class="card-title mb-1">Dr LOTIS Djopi</h5>
                             <p class="text-muted mb-2">Fondateur & Directeur</p>
@@ -118,6 +118,16 @@
                             <p class="text-muted mb-2">Responsable Relations Adhérents</p>
                             <p class="card-text small">"Toujours à l’écoute pour mieux vous accompagner."</p>
                         </div>
+                    </div>
+                </div>
+                <div class="card text-center shadow p-4 mb-5 bg-white rounded">
+                    <img src="images/lotis.jpg" class="rounded-circle mx-auto d-block"
+                        style="width:200px; height:200px; object-fit:cover; object-position:center; border:4px solid #f0f0f0; box-shadow:0 4px 10px rgba(0,0,0,0.1);"
+                        alt="Nom Prénom">
+                    <div class="card-body">
+                        <h5 class="card-title mt-3">Nom Prénom</h5>
+                        <p class="card-text text-muted">Ingénieur Logiciel | Développeur Web</p>
+                        <a href="#" class="btn btn-primary rounded-pill px-4">Voir plus</a>
                     </div>
                 </div>
                 <div class="col-md-4">
