--- a/team.html
+++ b/team.html
@@ -98,47 +98,44 @@
             </div>
             <!-- Ajout de la touche personnelle : cartes membres de l'équipe -->
             <div class="row g-4 justify-content-center">
-                <div class="col-md-4">
-                    <div class="card h-100 shadow-sm border-0 text-center animate__animated animate__fadeInUp">
-                        <img src="images/lotis.jpg" class="card-img-top rounded-circle mx-auto mt-6"
-                            style="width:200px;height:200px;object-fit:cover;" alt="Nom Prénom">
-                        <div class="card-body">
-                            <h5 class="card-title mb-1">Dr LOTIS Djopi</h5>
-                            <p class="text-muted mb-2">Fondateur & Directeur</p>
-                            <p class="card-text small">"Mettre l’humain au cœur de la santé, c’est notre mission."</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card h-100 shadow-sm border-0 text-center animate__animated animate__fadeInUp">
-                        <img src="images/membre2.jpg" class="card-img-top rounded-circle mx-auto mt-3"
-                            style="width:120px;height:120px;object-fit:cover;" alt="Nom Prénom">
-                        <div class="card-body">
-                            <h5 class="card-title mb-1">Marie Mbala</h5>
-                            <p class="text-muted mb-2">Responsable Relations Adhérents</p>
-                            <p class="card-text small">"Toujours à l’écoute pour mieux vous accompagner."</p>
-                        </div>
-                    </div>
-                </div>
                 <div class="card text-center shadow p-4 mb-5 bg-white rounded">
                     <img src="images/lotis.jpg" class="rounded-circle mx-auto d-block"
                         style="width:200px; height:200px; object-fit:cover; object-position:center; border:4px solid #f0f0f0; box-shadow:0 4px 10px rgba(0,0,0,0.1);"
                         alt="Nom Prénom">
                     <div class="card-body">
-                        <h5 class="card-title mt-3">Nom Prénom</h5>
-                        <p class="card-text text-muted">Ingénieur Logiciel | Développeur Web</p>
+                        <h5 class="card-title mt-3">Dr Djopy LOTIS</h5>
+                        <p class="card-text text-muted">Fondateur | Directeur</p>
                         <a href="#" class="btn btn-primary rounded-pill px-4">Voir plus</a>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="card h-100 shadow-sm border-0 text-center animate__animated animate__fadeInUp">
-                        <img src="images/membre3.jpg" class="card-img-top rounded-circle mx-auto mt-3"
-                            style="width:120px;height:120px;object-fit:cover;" alt="Nom Prénom">
-                        <div class="card-body">
-                            <h5 class="card-title mb-1">Jean Kabasele</h5>
-                            <p class="text-muted mb-2">Conseiller Santé</p>
-                            <p class="card-text small">"Votre bien-être, notre priorité chaque jour."</p>
-                        </div>
+                <div class="card text-center shadow p-4 mb-5 bg-white rounded">
+                    <img src="images/djani.jpg" class="rounded-circle mx-auto d-block"
+                        style="width:200px; height:200px; object-fit:cover; object-position:center; border:4px solid #f0f0f0; box-shadow:0 4px 10px rgba(0,0,0,0.1);"
+                        alt="Nom Prénom">
+                    <div class="card-body">
+                        <h5 class="card-title mt-3">Dr Djanny LUEMBA</h5>
+                        <p class="card-text text-muted"> Responsable Relation | </p>
+                        <a href="#" class="btn btn-primary rounded-pill px-4">Voir plus</a>
+                    </div>
+                </div>
+                <div class="card text-center shadow p-4 mb-5 bg-white rounded">
+                    <img src="images/auguy.jpg" class="rounded-circle mx-auto d-block"
+                        style="width:200px; height:200px; object-fit:cover; object-position:center; border:4px solid #f0f0f0; box-shadow:0 4px 10px rgba(0,0,0,0.1);"
+                        alt="Nom Prénom">
+                    <div class="card-body">
+                        <h5 class="card-title mt-3">Dr Auguy MUKENDI</h5>
+                        <p class="card-text text-muted">Conseiller Santé | Rélations expertises</p>
+                        <a href="#" class="btn btn-primary rounded-pill px-4">Voir plus</a>
+                    </div>
+                </div>
+                <div class="card text-center shadow p-4 mb-5 bg-white rounded">
+                    <img src="images/sam.jpg" class="rounded-circle mx-auto d-block"
+                        style="width:200px; height:200px; object-fit:cover; object-position:center; border:4px solid #f0f0f0; box-shadow:0 4px 10px rgba(0,0,0,0.1);"
+                        alt="Nom Prénom">
+                    <div class="card-body">
+                        <h5 class="card-title mt-3">Ir Samuel KISENGE</h5>
+                        <p class="card-text text-muted">Ingénieur Logiciel | Développeur Web</p>
+                        <a href="#" class="btn btn-primary rounded-pill px-4">Voir plus</a>
                     </div>
                 </div>
             </div>
