team_pages_orange_photos_lotisss

--- a/team.html
+++ b/team.html
@@ -6,19 +6,59 @@
     <meta name="description"
         content="LTD Health Club : mutuelle de santé humaine, accessible et adaptée à vos besoins à Kinshasa. Demandez un devis rapidement.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>team_Mutuelle Santé LTD HEALTH CLUB</title>
+    <title>Notre Équipe | LTD HEALTH CLUB</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .section-title {
+            color: #ff6600;
+        }
 
+        .card-team {
+            max-width: 320px;
+            margin: 0 auto;
+            border: none;
+        }
+
+        .card-team img {
+            width: 180px;
+            height: 180px;
+            object-fit: cover;
+            object-position: center;
+            border: 4px solid #f0f0f0;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
+        }
+
+        .card-team .card-title {
+            color: #ff6600;
+        }
+
+        .card-team .btn-primary {
+            background: #ff6600;
+            border: none;
+        }
+
+        .card-team .btn-primary:hover {
+            background: #e65c00;
+        }
+
+        .footer {
+            background: #222;
+            color: #fff;
+        }
+
+        .footer a {
+            color: #ff6600;
+        }
+    </style>
 </head>
 
 <body class="d-flex flex-column min-vh-100">
 
     <!-- HEADER -->
     <header class="shadow-sm">
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container">
                 <a class="navbar-brand d-flex align-items-center" href="#">
                     <img src="images/logo.jpg" alt="Logo" class="logo me-2" style="max-height:40px;">
@@ -32,9 +72,9 @@
                         <li class="nav-item"><a href="index.html" class="nav-link"><i
                                     class="fas fa-home fa-sm me-1"></i><span class="fw-bold">Accueil</span></a></li>
                         <li class="nav-item dropdown"><a href="services.html" class="nav-link dropdown-toggle"
-                                id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i
+                                id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i
                                     class="fas fa-hands-helping me-1"></i><span class="fw-bold">Nos Services</span></a>
-                            <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
+                            <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
                                 <li><a class="dropdown-item" href="hospitalisation.html">Hospitalisation</a></li>
                                 <li><a class="dropdown-item" href="soinsCourant.html">Soins courants</a></li>
                                 <li><a class="dropdown-item" href="dentaireOptique.html">Dentaire & Optique</a></li>
@@ -54,7 +94,6 @@
                                 <li><a class="dropdown-item" href="team.html">Notre Équipe</a></li>
                                 <li><a class="dropdown-item" href="engagement.html">Nos engagements</a></li>
                                 <li><a class="dropdown-item" href="partenaire.html">Nos Partenaires</a></li>
-
                             </ul>
                         </li>
                         <li class="nav-item"><a href="contact.html" class="nav-link"><i
@@ -65,88 +104,108 @@
             </div>
         </nav>
     </header>
-    <!-- Ajoute juste après la balise <header> -->
+
     <!-- Phrase défilante pour signaler la conception -->
     <div style="background:#ff6600; color:#fff; font-weight:bold;">
         <marquee behavior="scroll" direction="left" scrollamount="6">
             Cette page est en pleine conception. Merci de votre compréhension !
         </marquee>
     </div>
+
     <!-- SECTION ÉQUIPE -->
     <main class="flex-grow-1 py-5">
         <section class="container">
-            <div class="row justify-content-center">
-                <article class="card mb-5 border-0 shadow-sm">
-                    <div class="card-body p-4">
-                        <h2 class="h3 fw-bold mb-3 section-title"><i class="fas fa-users me-2"
-                                style="color:#ff6600;"></i>Notre
-                            équipe</h2>
-                        <div class="row align-items-center">
-                            <div class="col-md-8">
-                                <p>Notre équipe est composée de professionnels de la santé et de la protection
-                                    sociale, passionnés par leur métier et engagés à vos côtés.</p>
-                                <p>Nous mettons à votre disposition notre expertise pour vous accompagner dans vos
-                                    choix de santé et vous aider à mieux comprendre vos droits et vos garanties.</p>
-                            </div>
-                            <div class="col-md-6 mb-4 mb-md-0 text-center">
-                                <img src="images/assistance.jpg" alt="Travail d'équipe"
-                                    class="img-fluid rounded-4 shadow">
-                            </div>
+            <div class="row justify-content-center mb-5">
+                <div class="card text-center shadow p-4 bg-white rounded" style="max-width: 600px;">
+                    <div class="card-body">
+                        <h2 class="h3 fw-bold mb-3 section-title">
+                            <i class="fas fa-users me-2"></i>Notre équipe
+                        </h2>
+                        <p>
+                            Chez <span class="fw-bold" style="color:#ff6600;">LTD HEALTH CLUB</span>, notre équipe est
+                            composée de professionnels passionnés, unis par la volonté d’offrir à chacun de nos membres
+                            un accompagnement humain, personnalisé et innovant.
+                        </p>
+                        <p>
+                            Nous croyons en la force de l’écoute, du respect et de la solidarité pour bâtir une relation
+                            de confiance durable. Notre expertise et notre engagement sont à votre service pour vous
+                            guider dans vos choix de santé et vous aider à mieux comprendre vos droits et garanties.
+                        </p>
+                        <p>
+                            Faites confiance à une équipe dynamique, disponible et toujours prête à vous accompagner
+                            pour votre bien-être et celui de votre famille.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <!-- Cartes membres de l'équipe -->
+            <div class="row g-4 justify-content-center">
+                <div class="col-md-4">
+                    <div class="card card-team text-center shadow p-4 bg-white rounded">
+                        <img src="images/assistance.jpg" class="rounded-circle mx-auto d-block mb-3"
+                            alt="Travail d'équipe">
+                        <div class="card-body">
+                            <h5 class="card-title mt-2">Notre équipe</h5>
+                            <p class="card-text text-muted">Des professionnels engagés, solidaires et à l’écoute, réunis
+                                pour vous accompagner à chaque étape de votre parcours santé.</p>
+                            <a href="#" class="btn btn-primary rounded-pill px-4">Voir plus</a>
                         </div>
                     </div>
-                </article>
+                </div>
+                <div class="col-md-4">
+                    <div class="card card-team text-center shadow p-4 bg-white rounded">
+                        <img src="images/lotis.jpg" class="rounded-circle mx-auto d-block mb-3" alt="Dr Djopy LOTIS">
+                        <div class="card-body">
+                            <h5 class="card-title mt-2">Dr Djopy LOTIS</h5>
+                            <p class="card-text text-muted">Fondateur & Directeur<br>Visionnaire, il guide l’équipe avec
+                                passion et engagement pour une santé accessible à tous.</p>
+                            <a href="#" class="btn btn-primary rounded-pill px-4">Voir plus</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card card-team text-center shadow p-4 bg-white rounded">
+                        <img src="images/djani.jpg" class="rounded-circle mx-auto d-block mb-3" alt="Dr Djanny LUEMBA">
+                        <div class="card-body">
+                            <h5 class="card-title mt-2">Dr Djanny LUEMBA</h5>
+                            <p class="card-text text-muted">Directeur Médical & Financier<br>Expert en gestion et soins,
+                                il veille à la qualité et à la sécurité de nos services.</p>
+                            <a href="#" class="btn btn-primary rounded-pill px-4">Voir plus</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card card-team text-center shadow p-4 bg-white rounded">
+                        <img src="images/auguy.jpg" class="rounded-circle mx-auto d-block mb-3" alt="Dr Auguy MUKENDI">
+                        <div class="card-body">
+                            <h5 class="card-title mt-2">Dr Auguy MUKENDI</h5>
+                            <p class="card-text text-muted">Directeur Administratif & RH<br>Garant d’une organisation
+                                efficace et humaine, il valorise chaque membre de l’équipe.</p>
+                            <a href="#" class="btn btn-primary rounded-pill px-4">Voir plus</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card card-team text-center shadow p-4 bg-white rounded">
+                        <img src="images/sam.jpg" class="rounded-circle mx-auto d-block mb-3" alt="Ir Samuel KISENGE">
+                        <div class="card-body">
+                            <h5 class="card-title mt-2">Ir Samuel KISENGE</h5>
+                            <p class="card-text text-muted">Directeur Informatique<br>Ingénieur logiciel et développeur
+                                web, il assure la modernité et la sécurité de nos outils numériques.</p>
+                            <a href="#" class="btn btn-primary rounded-pill px-4">Voir plus</a>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <!-- Ajout de la touche personnelle : cartes membres de l'équipe -->
-            <div class="row g-4 justify-content-center">
-                <div class="card text-center shadow p-4 mb-5 bg-white rounded">
-                    <img src="images/lotis.jpg" class="rounded-circle mx-auto d-block"
-                        style="width:200px; height:200px; object-fit:cover; object-position:center; border:4px solid #f0f0f0; box-shadow:0 4px 10px rgba(0,0,0,0.1);"
-                        alt="Nom Prénom">
-                    <div class="card-body">
-                        <h5 class="card-title mt-3">Dr Djopy LOTIS</h5>
-                        <p class="card-text text-muted">Fondateur | Directeur</p>
-                        <a href="#" class="btn btn-primary rounded-pill px-4">Voir plus</a>
-                    </div>
-                </div>
-                <div class="card text-center shadow p-4 mb-5 bg-white rounded">
-                    <img src="images/djani.jpg" class="rounded-circle mx-auto d-block"
-                        style="width:200px; height:200px; object-fit:cover; object-position:center; border:4px solid #f0f0f0; box-shadow:0 4px 10px rgba(0,0,0,0.1);"
-                        alt="Nom Prénom">
-                    <div class="card-body">
-                        <h5 class="card-title mt-3">Dr Djanny LUEMBA</h5>
-                        <p class="card-text text-muted"> Responsable Relation | </p>
-                        <a href="#" class="btn btn-primary rounded-pill px-4">Voir plus</a>
-                    </div>
-                </div>
-                <div class="card text-center shadow p-4 mb-5 bg-white rounded">
-                    <img src="images/auguy.jpg" class="rounded-circle mx-auto d-block"
-                        style="width:200px; height:200px; object-fit:cover; object-position:center; border:4px solid #f0f0f0; box-shadow:0 4px 10px rgba(0,0,0,0.1);"
-                        alt="Nom Prénom">
-                    <div class="card-body">
-                        <h5 class="card-title mt-3">Dr Auguy MUKENDI</h5>
-                        <p class="card-text text-muted">Conseiller Santé | Rélations expertises</p>
-                        <a href="#" class="btn btn-primary rounded-pill px-4">Voir plus</a>
-                    </div>
-                </div>
-                <div class="card text-center shadow p-4 mb-5 bg-white rounded">
-                    <img src="images/sam.jpg" class="rounded-circle mx-auto d-block"
-                        style="width:200px; height:200px; object-fit:cover; object-position:center; border:4px solid #f0f0f0; box-shadow:0 4px 10px rgba(0,0,0,0.1);"
-                        alt="Nom Prénom">
-                    <div class="card-body">
-                        <h5 class="card-title mt-3">Ir Samuel KISENGE</h5>
-                        <p class="card-text text-muted">Ingénieur Logiciel | Développeur Web</p>
-                        <a href="#" class="btn btn-primary rounded-pill px-4">Voir plus</a>
-                    </div>
-                </div>
-            </div>
-            <!-- Fin ajout cartes membres -->
+            <!-- Fin cartes membres -->
         </section>
     </main>
+
     <!-- FOOTER -->
     <footer class="footer mt-auto py-4">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-md-8 text-center">
+                <div class="col-md-8 text-center text-md-start">
                     <p class="mb-1">&copy; 2025 Samuel Kisenge. Tous droits réservés.</p>
                     <p class="text-white-50 mb-0"><small>
                             Téléphone : <a href="tel:+243811641927" class="text-white-50 text-decoration-none">+243 811
